--- a/env.sample
+++ b/env.sample
@@ -1,2 +1,12 @@
-PORT=3000
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+#Server
+PORT=5000 
+NODE_ENV=development
+
+#DB
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE 
+
+#JWT
+JWT_SECRET=your_jwt_secret 
+ACCESS_TOKEN_EXPIRES_IN=3h
+REFRESH_TOKEN_EXPIRES_IN=7d 
+
